--- a/netflix-clone/src/App.css
+++ b/netflix-clone/src/App.css
@@ -3,3 +3,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  background-color: #111;  /* Netflix-style dark background */
+  color: white;
+  margin: 0;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+}
