--- a/netflix-clone/src/App.css
+++ b/netflix-clone/src/App.css
@@ -7,5 +7,5 @@ body {
   background-color: #111;  /* Netflix-style dark background */
   color: white;
   margin: 0;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Netflix Sans', Helvetica, Arial, sans-serif;
 }
